--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ doc = true
 default = []
 
 [dependencies]
-stm-core = "0.4"
+stm-core = { path = "./stm-core" }
 
 # [patch.crates-io]
 # stm-core = { path = "stm-core" }
