--- a/stm-core/Cargo.toml
+++ b/stm-core/Cargo.toml
@@ -41,6 +41,10 @@ doc = true
 [features]
 default = []
 
+[dependencies]
+archery = "0.5.0"
+rpds = "0.13.0"
+
 [dependencies.parking_lot]
 version = "0.5"
 default-features = false
